src/objects/GLBL_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Additional info, if applicable, such as error notes or developer hints</description>
        <inlineHelpText>Additional info, if applicable, such as error notes or developer hints</inlineHelpText>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_SFDC_ID__c</fullName>
        <label>Data SFDC ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Datetime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The date and time this error occurred</description>
        <inlineHelpText>The date and time this error occurred</inlineHelpText>
        <label>Error Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>The error message produced by this error</description>
        <inlineHelpText>The error message produced by this error</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLBL_Class_Name__c</fullName>
        <description>Holds the class name that generated the error log record</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLBL_Method_Name__c</fullName>
        <description>Holds the method name in the class that generated the error log record.</description>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The running user for this error</description>
        <inlineHelpText>The running user for this error</inlineHelpText>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GLBL_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>The system stack trace for this error, if one exists</description>
        <inlineHelpText>The system stack trace for this error, if one exists</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Error_Datetime__c</columns>
        <columns>Running_User__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Additional_Information__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ERR-{000000}</displayFormat>
        <label>Error Log Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>